--- a/new_java/start1/build.gradle
+++ b/new_java/start1/build.gradle
@@ -15,6 +15,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     implementation 'org.jsoup:jsoup:1.18.1'
+
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+    implementation 'org.apache.poi:poi:5.2.5'
+
 }
 
 test {
