--- a/new_java/start1/build.gradle
+++ b/new_java/start1/build.gradle
@@ -19,6 +19,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.poi/poi
     implementation 'org.apache.poi:poi:5.2.5'
 
+    implementation 'org.projectlombok:lombok:1.18.24'  // compile을 implementation으로 변경
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'  // annotationProcessor는 그대로 유지
+
+    implementation 'mysql:mysql-connector-java:8.0.33' // 버전은 사용 중인 MySQL 서버와 호환되는 최신 버전으로 설정합니다.
+
+    implementation 'org.mongodb:mongo-java-driver:3.2.2' // mongoDB
 }
 
 test {
